--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,6 @@
-#myVideo{
+#carouselExampleIndicators{
   width:100%;
+  background-color: black;
 }
 
 .container-fluid{
@@ -14,6 +15,10 @@
 
 .img-carousel{
   width:100%;
+}
+
+.carousel-inner{
+  margin-bottom: 0px !important;
 }
 
 .img-right, .img-left{
