--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,25 +11,25 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="home">{{this.languagesService.navItem1}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="home" (click)="goTo('home')">{{this.languagesService.navItem1}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="lookbook">{{this.languagesService.navItem4}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="lookbook" (click)="goTo('lookbook')">{{this.languagesService.navItem4}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="e30">{{this.languagesService.navItem5}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="e30" (click)="goTo('e30')">{{this.languagesService.navItem5}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="unique">{{this.languagesService.navItem6}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="unique" (click)="goTo('unique')">{{this.languagesService.navItem6}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="works">{{this.languagesService.navItem7}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="works" (click)="goTo('works')">{{this.languagesService.navItem7}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="distributors">{{this.languagesService.navItem2}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="distributors" (click)="goTo('distributors')">{{this.languagesService.navItem2}}</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link top-right-link" routerLink="contact">{{this.languagesService.navItem3}}</a>
+          <a class="nav-link top-right-link" data-toggle="collapse" data-target=".navbar-collapse.show" routerLink="contact" (click)="goTo('contact')">{{this.languagesService.navItem3}}</a>
         </li>
       </ul>
     </div>
