--- a/src/app/distributors/distributors.component.css
+++ b/src/app/distributors/distributors.component.css
@@ -158,13 +158,11 @@
   text-align: center;
   font-family: 'Brandon_light', Arial, Verdana;
   font-size: 42px !important;
-  font-weight:bold;
 }
 
 .title-expansion{
   font-family: 'Brandon_light', Arial, Verdana;
   font-size:20px;
-  font-weight: bold;
 }
 
 .right-text-expansion{
@@ -193,4 +191,8 @@
 .row{
   margin-left:0px;
   margin-right:0px;
+}
+
+.mat-expansion-panel{
+  box-shadow: 0 15px 30px 0 rgba(0,0,0,.11), 0 5px 15px 0 rgba(0,0,0,.08) !important;
 }
