--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,13 +1,14 @@
 .black-navbar{
   background-color: rgb(0, 0, 0);
-}
-
-.white-navbar{
-  background-color: rgb(255, 255, 255);
+  box-shadow: 0 15px 30px 0 rgba(0,0,0,.11), 0 5px 15px 0 rgba(0,0,0,.08);
 }
 
 .brown-navbar{
   background-color: #232323;
+}
+
+.white-navbar {
+  background-color: white;
 }
 
 .top-right-link{
