--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,36 +19,43 @@
 
 <div class="container img-txt">
   <div class="row">
-    <div class="col centered">
+    <div class="col" style="margin:auto;">
        <div class="txt-left">
          <h1 style="font-size:48px;">{{this.languagesService.homeTitle1}}</h1>
          <p class="gray-text">{{this.languagesService.homeContent1}}</p>
          <p class="gray-text">{{this.languagesService.homeContent2}}</p>
        </div>
     </div>
-    <div class="col centered">
+    <div class="col" style="margin:auto;">
       <img class="img-right" src="../../assets/images/home1.jpg">
     </div>
   </div>
 </div>
 
 <div class="container-fluid" style="background-color: black">
-  <div id="white-text-container" class="container" style="color:white;font-size:35px;max-width: 800px;font-weight: bold">
-    <p id="white-text">{{this.languagesService.homeContent3}}</p>
+  <div id="white-text-container" class="container" style="color:white;font-size:35px;font-weight: bold;text-align: center">
+    <p id="white-text" style="margin-bottom:40px;">Faire du sur-mesure le standard d’aujourd’hui…</p>
+    <p id="white-text" style="margin-bottom:40px;">Et si votre projet de cuisine s’affranchissait des règles conventionnelles pour finalement répondre à vos attentes plus qu’à celle d’un industriel ?</p>
+    <p id="white-text">"eggersmann, Welcome to the Kitchen"</p>
     <span class="border-bottom"></span>
   </div>
 </div>
 
 <div class="container img-txt">
     <div class="row">
-      <div class="col">
+      <div class="col" style="margin:auto;">
           <img class="img-left" src="../../assets/images/1.jpg">
       </div>
-      <div class="col">
+      <div class="col" style="margin:auto">
          <div class="txt-right">
-           <h1 style="font-size:48px;">{{this.languagesService.homeTitle2}}</h1>
-           <p class="gray-text">{{this.languagesService.homeContent4}}</p>
-           <p class="gray-text">{{this.languagesService.homeContent5}}</p>
+          <p class="gray-text">Vous découvrirez ici des concepts présentés idéalement par la marque ainsi que des projets en situation réelle.</p>
+
+          <p class="gray-text">Nos partenaires sont sélectionnés parmi les meilleurs professionnels pour réaliser votre projet, eggersmann leur assurant une liberté totale de dessin et de conception.</p>
+
+          <p class="gray-text">Le résultat, un design intemporel qui assure à votre cuisine de ne jamais être datée au fil des ans.</p>
+
+          <p class="gray-text" style="margin-bottom: 0px;">Qualitativement vôtre,</p>
+          <p class="gray-text">eggersmann France</p>
          </div>
       </div>
     </div>
