--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -7,6 +7,10 @@
   background-color: rgba(0,0,0,0.6);
 }
 
+.left-side-container {
+  min-width: 435px;
+}
+
 .radio-group{
   display: inline-flex;
   flex-direction: column;
@@ -29,4 +33,10 @@
 .next-back-button{
   color:white;
   background-color:black;
+}
+
+@media only screen and (max-width: 600px) {
+  .left-side-container {
+    min-width: unset;
+  }
 }
