major modifications PROD

--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,42 +1,15 @@
 .contact-container{
   background-image: url('../../assets/images/contact.jpg');
+  min-height: 1500px;
+  background-size:cover;
+  background-position: center center;
 }
 
-.contact-container .col-md-4{
-  min-height:954px !important;
-  background-color: rgba(0,0,0,0.6);
-}
-
-.left-side-container {
-  min-width: 435px;
-}
-
-.radio-group{
-  display: inline-flex;
-  flex-direction: column;
-}
-
-.stepper-next-button{
-  float:right;
-}
-
-.contact-fields-container{
-  display: inline-flex;
-  flex-direction: column;
-}
-
-.next-back-button-container{
-  margin-top:50px;
-  margin-bottom:20px;
-}
-
-.next-back-button{
-  color:white;
-  background-color:black;
-}
-
-@media only screen and (max-width: 600px) {
-  .left-side-container {
-    min-width: unset;
-  }
+.temporary-announcement {
+  font-family: 'Brandon_light', Arial, Verdana;
+  font-size: 70px;
+  color: white;
+  width: 100%;
+  text-align:center;
+  padding-top:300px;
 }
