--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,77 +1,5 @@
-<div class="row contact-container">
-  <div class="col-sm-12 col-md-4 left-side-container">
-      <mat-vertical-stepper [linear]="false" #stepper style="padding-top: 100px;background-color:rgba(255, 255, 255, 0)">
-          <mat-step [stepControl]="firstFormGroup">
-            <form [formGroup]="firstFormGroup">
-              <ng-template matStepLabel>Devenir partenaire ?</ng-template>
-              <div>
-                  <mat-radio-group class="radio-group">
-                      <mat-radio-button [checked]="true" value="1">Je suis un particulier</mat-radio-button>
-                      <mat-radio-button value="2">Je souhaite devenir revendeur</mat-radio-button>
-                  </mat-radio-group>
-                  <div class="next-back-button-container">
-                      <button mat-button matStepperNext class="next-back-button">Suivant</button>
-                  </div>
-              </div>
-            </form>
-          </mat-step>
-          <mat-step>
-            <ng-template matStepLabel>Catalogue</ng-template>
-              <mat-checkbox [(ngModel)]="checked">Je souhaite recevoir le catalogue eggersmann<br>dans le showroom de mon choix</mat-checkbox>
-            <div *ngIf="checked">
-                <mat-form-field style="margin-top:30px;">
-                    <mat-select placeholder="Showroom" [formControl]="showroomControl" [(ngModel)]="mailObject.showroomCatalog">
-                      <mat-optgroup *ngFor="let group of showroomGroups" [label]="group.name">
-                        <mat-option *ngFor="let showroom of group.Showroom" [value]="showroom.value">
-                          {{showroom.viewValue}}
-                        </mat-option>
-                      </mat-optgroup>
-                    </mat-select>
-                  </mat-form-field>
-            </div>
-            <div class="next-back-button-container">
-                <button mat-button matStepperNext class="next-back-button">Suivant</button>
-            </div>
-          </mat-step>
-          <mat-step [stepControl]="secondFormGroup">
-            <form [formGroup]="secondFormGroup">
-              <ng-template matStepLabel>Informations personnelles</ng-template>
-              <div class="contact-fields-container">
-                    <mat-form-field>
-                      <input matInput placeholder="Prénom" formControlName="firstNameCtrl" [(ngModel)]="mailObject.firstName" required >
-                    </mat-form-field>
-                    <mat-form-field>
-                      <input matInput placeholder="Nom" formControlName="lastNameCtrl" [(ngModel)]="mailObject.lastName" required>
-                    </mat-form-field>
-                    <mat-form-field>
-                      <input matInput placeholder="E-mail" formControlName="emailCtrl" [(ngModel)]="mailObject.email" required>
-                    </mat-form-field>
-                    <mat-form-field>
-                        <input matInput placeholder="Pays" formControlName="countryCtrl" [(ngModel)]="mailObject.country" required>
-                    </mat-form-field>
-                    <mat-form-field>
-                      <input matInput placeholder="Adresse" formControlName="addressCtrl" [(ngModel)]="mailObject.address" required>
-                    </mat-form-field>
-                    <mat-form-field>
-                      <input matInput placeholder="Téléphone" formControlName="phoneCtrl" [(ngModel)]="mailObject.phone" required>
-                    </mat-form-field>
-              </div>
-            </form>
-            <div class="next-back-button-container">
-                <button mat-button matStepperNext class="next-back-button" (click)="sendEmail()">Suivant</button>
-            </div>
-          </mat-step>
-          <div class="next-back-button-container">
-              <button mat-button matStepperNext class="next-back-button">Suivant</button>
-          </div>
-          <mat-step>
-              <ng-template matStepLabel>Merci</ng-template>
-              <div>
-                  <i class="material-icons" style="font-size:30px;padding-right:10px;color:lightgrey">done_all</i>
-                  <span style="position:relative; top:-7px;color:lightgrey">Votre demande a été prise en compte</span>
-              </div>
-          </mat-step>
-      </mat-vertical-stepper>
+<div class="contact-container">
+  <div class="temporary-announcement">
+    Bientôt...
   </div>
 </div>
-
