--- a/src/app/distributors/distributors.component.html
+++ b/src/app/distributors/distributors.component.html
@@ -175,6 +175,38 @@
            île de France
         </div>
         <mat-accordion>
+            <mat-expansion-panel class="distributor-expansion" [expanded]="focus == 'paris7'">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        <div class="title-expansion">Paris 7ème</div>
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <ng-template matExpansionPanelContent>
+                  <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                      <iframe
+                          width="100%"
+                          height="320"
+                          frameborder="0" style="border:0"
+                          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB5SIVpkS8tQ7uQ_LVt8ysiSwtg4Uk7ujM
+                            &q=4 Rue de Luynes, 75007 Paris" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                      <div class="right-text-expansion">
+                        <h3 style="color:gray;font-weight: bold;">Dimi Interior Design</h3>
+                        <h6 style="color:gray;">4 rue de Luynes, 75007 Paris</h6>
+                        <h6 style="color:gray; margin-top:60px;">Tél. +33 1 42 84 36 06</h6>
+                        <h6><a style="color:gray" href="Mailto:paris07@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
+                        <h6><a style="color:gray" href="http://dimi-interiordesign.com/" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
+                        <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
+                        <p style="color:gray; margin-bottom:0px;"> Du mardi au samedi : 10:00 - 13:00 / 14:00 - 19:00</p>
+                        <p style="color:gray; margin-bottom:0px;"> Lundi sur rendez-vous</p>
+                      </div>
+                    </div>
+                  </div>
+                </ng-template>
+            </mat-expansion-panel>
           <mat-expansion-panel class="distributor-expansion" [expanded]="focus == 'paris8'">
             <mat-expansion-panel-header>
                 <mat-panel-title>
@@ -207,37 +239,35 @@
               </div>
             </ng-template>
           </mat-expansion-panel>
-          <mat-expansion-panel class="distributor-expansion" [expanded]="focus == 'paris7'">
-              <mat-expansion-panel-header>
-                  <mat-panel-title>
-                      <div class="title-expansion">Paris 7ème</div>
-                  </mat-panel-title>
-              </mat-expansion-panel-header>
-              <ng-template matExpansionPanelContent>
-                <div class="row">
-                  <div class="col-xs-12 col-md-6">
-                    <iframe
-                        width="100%"
-                        height="320"
-                        frameborder="0" style="border:0"
-                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB5SIVpkS8tQ7uQ_LVt8ysiSwtg4Uk7ujM
-                          &q=4 Rue de Luynes, 75007 Paris" allowfullscreen>
-                      </iframe>
-                  </div>
-                  <div class="col-xs-12 col-md-6">
-                    <div class="right-text-expansion">
-                      <h3 style="color:gray;font-weight: bold;">Dimi Interior Design</h3>
-                      <h6 style="color:gray;">4 rue de Luynes, 75007 Paris</h6>
-                      <h6 style="color:gray; margin-top:60px;">Tél. +33 1 42 84 36 06</h6>
-                      <h6><a style="color:gray" href="Mailto:paris07@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
-                      <h6><a style="color:gray" href="http://dimi-interiordesign.com/" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
-                      <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
-                      <p style="color:gray; margin-bottom:0px;"> Du mardi au samedi : 10:00 - 13:00 / 14:00 - 19:00</p>
-                      <p style="color:gray; margin-bottom:0px;"> Lundi sur rendez-vous</p>
+            <mat-expansion-panel class="distributor-expansion" [expanded]="focus == 'paris12'">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        <div class="title-expansion">Paris 12ème</div>
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                <ng-template matExpansionPanelContent>
+                  <div class="row">
+                    <div class="col-xs-12 col-md-6">
+                      <iframe
+                          width="100%"
+                          height="320"
+                          frameborder="0" style="border:0"
+                          src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB5SIVpkS8tQ7uQ_LVt8ysiSwtg4Uk7ujM
+                            &q=68 Avenue Ledru-Rollin, 75012 Paris" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="col-xs-12 col-md-6">
+                      <div class="right-text-expansion">
+                        <h3 style="color:gray;font-weight: bold;">Paul & Benjamin</h3>
+                        <h6 style="color:gray;">68 Avenue Ledru-Rollin, 75012 Paris</h6>
+                        <h6 style="color:gray; margin-top:60px;">Tél. +33 7 86 11 06 37</h6>
+                        <h6><a style="color:gray" href="Mailto:paris12@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
+                        <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
+                        <p style="color:gray; margin-bottom:0px;"> Du lundi au samedi : 10:00 - 12:00 / 14:00 - 19:00</p>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </ng-template>
+                </ng-template>
             </mat-expansion-panel>
             <mat-expansion-panel class="distributor-expansion" [expanded]="focus == 'lePerreux'">
                 <mat-expansion-panel-header>
@@ -271,36 +301,6 @@
                   </div>
                 </ng-template>
               </mat-expansion-panel>
-              <mat-expansion-panel class="distributor-expansion" [expanded]="focus == 'paris12'">
-                  <mat-expansion-panel-header>
-                      <mat-panel-title>
-                          <div class="title-expansion">Paris 12ème</div>
-                      </mat-panel-title>
-                  </mat-expansion-panel-header>
-                  <ng-template matExpansionPanelContent>
-                    <div class="row">
-                      <div class="col-xs-12 col-md-6">
-                        <iframe
-                            width="100%"
-                            height="320"
-                            frameborder="0" style="border:0"
-                            src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB5SIVpkS8tQ7uQ_LVt8ysiSwtg4Uk7ujM
-                              &q=68 Avenue Ledru-Rollin, 75012 Paris" allowfullscreen>
-                          </iframe>
-                      </div>
-                      <div class="col-xs-12 col-md-6">
-                        <div class="right-text-expansion">
-                          <h3 style="color:gray;font-weight: bold;">Paul & Benjamin</h3>
-                          <h6 style="color:gray;">68 Avenue Ledru-Rollin, 75012 Paris</h6>
-                          <h6 style="color:gray; margin-top:60px;">Tél. +33 7 86 11 06 37</h6>
-                          <h6><a style="color:gray" href="Mailto:paris12@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
-                          <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
-                          <p style="color:gray; margin-bottom:0px;"> Du lundi au samedi : 10:00 - 12:00 / 14:00 - 19:00</p>
-                        </div>
-                      </div>
-                    </div>
-                  </ng-template>
-                </mat-expansion-panel>
         </mat-accordion>
     </div>
     <div class="col-xs-12 col-md-12">
@@ -598,7 +598,7 @@
             </div>
             <div class="col-xs-12 col-md-6">
               <div class="right-text-expansion">
-                <h3 style="color:gray;font-weight: bold;">Habitat Project</h3>
+                <h3 style="color:gray;font-weight: bold;">Suzzoni Balagne</h3>
                 <h6 style="color:gray;">Galerie Ferrandini, 3 Avenue Paul Doumer, 20220 L'Île-Rousse</h6>
                 <h6 style="color:gray; margin-top:60px;">Tél. +33 4 95 55 86 41</h6>
                 <h6><a style="color:gray" href="Mailto:corse@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
@@ -846,10 +846,10 @@
                   <h6 style="color:gray;">17 Boulevard d'Italie, 98000 Monaco</h6>
                   <h6 style="color:gray; margin-top:60px;">Tél. +377 932 55 915</h6>
                   <h6><a style="color:gray" href="Mailto:monaco@eggersmann.fr" title="Envoyer un email">e-mail</a></h6>
-                  <h6><a style="color:gray" href="http://www.lesateliersduboismonaco.com/" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
+                  <h6><a style="color:gray" href="www.adbcuisines.com" target="_blank" title="Ouverture nouvelle fenêtre">Site Internet</a></h6>
                   <h6 style="color:gray; margin-top:60px;font-weight: bold"> Ouverture du Showroom :</h6>
-                  <p style="color:gray; margin-bottom:0px;"> Du lundi au vendredi : 09:00 - 12:00 / 15:00 - 19:00</p>
-                  <p style="color:gray; margin-bottom:0px;"> Autres horaires sur rendez-vous</p>
+                  <p style="color:gray; margin-bottom:0px;"> Du lundi au vendredi : 09:00 - 12:00 / 14:00 - 18:00</p>
+                  <p style="color:gray; margin-bottom:0px;"> Entre 12h et 14h uniquement sur rendez-vous</p>
                 </div>
               </div>
             </div>
