--- a/src/app/e30/e30.component.html
+++ b/src/app/e30/e30.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid" style="margin:0px auto 130px auto;">
     <h1 id="title1" style="margin-bottom:50px;">E3.0</h1>
 
-    <p class="page-description text-center">{{this.languagesService.e30Intro}}</p>
+    <p class="page-description">{{this.languagesService.e30Intro}}</p>
 
   </div>
 
