--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col centered">
         <div style="text-align: center; padding-top:30px; padding-bottom: 30px">
-            <a href="#" class="fa fa-facebook" [ngClass]="{'fa-bg-dark':this.navigationService.isIn(['home', 'unique', 'distributors', 'contact', 'works']), 'fa-bg-light':this.navigationService.isIn(['e30', 'lookbook'])}"></a>
+            <a href="https://www.facebook.com/eggersmann.unique/" class="fa fa-facebook" [ngClass]="{'fa-bg-dark':this.navigationService.isIn(['home', 'unique', 'distributors', 'contact', 'works']), 'fa-bg-light':this.navigationService.isIn(['e30', 'lookbook'])}"></a>
         </div>
     </div>
     <div class="col centered">
@@ -17,12 +17,9 @@
     <div class="col"></div>
   </div>
   <div class="row">
-      <div class="col"></div>
       <div class="col">
           <div class="text-center" style="color:gray; padding-bottom:10px; font-size: 15px;">© 2018 Copyright: Eggersmann-france.com
           </div>
-      </div>
-      <div class="col"></div>
   </div>
 </div>
 
