--- a/src/app/lookbook/lookbook.component.html
+++ b/src/app/lookbook/lookbook.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid" style="margin:0px auto 130px auto;">
     <h1 style="margin-bottom:50px;">Lookbook</h1>
 
-    <p class="page-description text-center">{{this.languagesService.lookbookIntro}}</p>
+    <p class="page-description">{{this.languagesService.lookbookIntro}}</p>
 
   </div>
 
