--- a/src/app/works/works.component.html
+++ b/src/app/works/works.component.html
@@ -4,7 +4,7 @@
       <img style="margin-bottom:50px;padding-top:150px;" src="../../assets/images/works/works-logo.png" />
     </div>
 
-    <p class="page-description text-center" style="color:white;">{{this.languagesService.worksIntro}}</p>
+    <p class="page-description" style="color:white;">{{this.languagesService.worksIntro}}</p>
 
   </div>
 
