--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,21 +1,16 @@
-<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
+<div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false" data-interval="5000">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="../../assets/images/carousel/carousel2.png" alt="First slide">
+      <div class="carousel-item active" style="background-image: url('../../assets/images/e30/aluminum-quartzite/Torino_01.jpg'); background-size:cover; background-position: center center;">
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/carousel/carousel4.png" alt="Second slide">
+      <div class="carousel-item" style="background-image: url('../../assets/images/unique/Carbono/Carbono_01.jpg'); background-size:cover; background-position: center center;">
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="../../assets/images/carousel/carousel7.png" alt="Third slide">
+      <div class="carousel-item" style="background-image: url('../../assets/images/unique/Valcamonica/Valcamonica_01.jpg'); background-size:cover; background-position: center center;">
       </div>
     </div>
+    <div class="black-filter"></div>
   </div>
+
+  <div class="carousel-title"> eggersmann, Welcome to the Kitchen </div>
 
 <div class="container img-txt">
   <div class="row">
@@ -62,13 +57,16 @@
   </div>
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox" style="margin-bottom:110px !important;">
+    <div class="carousel-inner no-fixed-height" role="listbox" style="margin-bottom:110px !important;">
       <div class="carousel-item active">
-        <img class="img-carousel" src="../../assets/images/1.jpg" alt="First slide">
+        <img class="img-carousel" src="../../assets/images/lookbook/seaside-resort/seaside_01.jpg" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="img-carousel" src="../../assets/images/2.jpg" alt="Second slide">
+        <img class="img-carousel" src="../../assets/images/lookbook/maison-hambourg/Haus_Hamburg01_1400x800.jpg" alt="Second slide">
       </div>
+      <div class="carousel-item">
+          <img class="img-carousel" src="../../assets/images/unique//Nero-Assoluto//nero_assoluto01_1400x800.jpg" alt="Third slide">
+        </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
