--- a/src/app/unique/unique.component.html
+++ b/src/app/unique/unique.component.html
@@ -4,7 +4,7 @@
       <img style="margin-bottom:50px;padding-top:190px;" src="../../assets/images/unique/logo_unique.gif" />
     </div>
 
-    <p class="page-description text-center" style="color:white;">{{this.languagesService.uniqueIntro}}</p>
+    <p class="page-description" style="color:white;">{{this.languagesService.uniqueIntro}}</p>
 
   </div>
 
